--- a/jakefrontend/src/index.css
+++ b/jakefrontend/src/index.css
@@ -6,22 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.site-container {
+  min-height: 100vh;
+}
 main {
-  padding: 1rem;
+  flex: 1;
 }
-
-header {
-  background-color: #404040;
-  padding: 1rem;
-}
-
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
-}
-
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -32,12 +22,10 @@ header a {
   border: 1px #404040 solid;
   margin: 1rem;
 }
-
 .product img {
   width: 100%;
-  max-width: 350px;
+  max-width: 400px;
 }
-
 .product-info {
   padding: 1rem;
 }
